test/parser/fail/novarexst.ang
f : exists ( ; Type)
f = Bool
